--- a/yes.html
+++ b/yes.html
@@ -15,7 +15,7 @@
         />
       </div>
       <button class="btn" id="yesButton" onclick="nextPage()">
-        Let's Fix a Date
+        <a href="#service" class="btn btn-primary rounded w-lg btn-lg my-1">Let's Fix a Date</a>
       </button>
     </div>
   </body>
